--- a/flavor/3.less
+++ b/flavor/3.less
@@ -412,6 +412,12 @@ nav.notifications > ul > li > a.active, nav.notifications > ul > li > a.active:h
 		font-size:15px;
 		top:4px;
 	}
+
+	img {
+		max-width:32px;
+		max-height:32px;
+		left:0px;
+	}
 }
 
 .feed_form_user .feed_form_user_info {
